Revert "Merge branch '1.21.6' into 1.21"
This reverts commit 6cf60516a9ca7b3d8a6546996384461b0bda36f7, reversing
changes made to 8fb3dc143464bd339ccc487af268cd1c99c9d6c4.